<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timetable</string>
    <string name="dit_timetables">DIT Timetables</string>
    <string name="main_title">Timetable</string>
    <string name="menu_download_pdf">Download PDF</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="course_code">Course code</string>

    <string-array name="year_values">
        <item>year 1</item>
        <item>year 2</item>
        <item>year 3</item>
        <item>year 4</item>
    </string-array>
    <string-array name="semester_predefines">
        <item>semester 1</item>
        <item>semester 2</item>
        <item>all weeks</item>
        <item>this week</item>
        <item>custom&#8230;</item>
    </string-array>

    <string name="login_credentials_text">Login credentials:</string>
    <string name="week_edit_hint">Weeks</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="login_cretentials">Timetables login:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="timetable_settings">Timetable settings:</string>
    <string name="menu_groups">Groups</string>
    <string name="title_activity_event_details">Event details</string>
    <string name="action_settings">Settings</string>
    <string name="web_view">View in browser</string>
    <string name="about_text">This is an unofficial timetable app for Dublin Institute of Technology students. It was created by Michael Dabski, a DT211 student.
        \n\nAuthor does not take responsibility for data displayed in this app. Please compare with your actual timetable and report any errors by pressing \'Feedback\' below.</string>
    <string name="about">About</string>
    <string name="title_activity_unfold">UnfoldActivity</string>
    <string name="share_timetable">Share timetable</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share_url">Share URL</string>
    <string name="downloading_timetable_">Downloading timetable&#8230;</string>
    <string name="pdf_download_error_">PDF download error!</string>
    <string name="share_timetable_pdf">Share timetable PDF</string>
    <string name="share_pdf_url">Share link to timetable</string>
    <string name="timetable_pdf_downloaded">Timetable PDF downloaded</string>
    <string name="retry">Retry</string>
    <string name="saved_timetables">Saved Timetables</string>
    <string name="clear_all">Clear all</string>
    <string name="delete">Delete</string>
    <string name="all_cached_timetables_will_be_deleted_if_you_wish_to_use_them_again_they_will_be_re_downloaded_continue_">All downloaded timetables will be deleted. If you\'d like to use them again, they will be re-downloaded. Continue?</string>
    <string name="all_viewed_timetables_are_saved_onto_your_device_">All viewed timetables are saved onto your device.</string>
    <string name="_d_items_deleted">%d items deleted</string>
    <string name="there_are_not_saved_timetables">There are no saved timetables</string>
    <string name="delete_timetables_">Delete timetables:</string>
    <string name="delete_">Delete&#8230;</string>
    <string name="no_items_deleted">No items selected</string>
    <string name="clear_cache">Clear cache</string>
    <string name="loading_">Loading&#8230;</string>
    <string name="selected_timetable_is_empty">Selected timetable is empty</string>
    <string name="download_started_">Download started</string>
    <string name="fetching_timetable_">Fetching timetable</string>
    <string name="downloading_event_details">Downloading event details</string>
    <string name="downloading_event_details_progress">Downloading event details: {current} of {total}</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="no_local_copy">No local copy</string>
    <string name="cancelling_">Cancelling&#8230;</string>
    <string name="logging_in_">Logging in&#8230;</string>
    <string name="title_activity_about">DIT Timetables</string>
    <string name="about_timetables">About Timetables</string>
    <string name="feedback">Send Feedback</string>
    <string name="share_app">Share this app</string>
    <string name="share_attach_text">Check out this app!</string>
    <string name="feedback_preset_string">App version %6$s (build %7$d)
Device: %1$s %2$s.Android %3$s, API %4$d.Dataset: %5$s</string>
    <string name="visit_website">Visit website</string>
    <string name="no_e_mail_client_detected">No E-mail client detected</string>
    <string name="google_plus">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="app_logo">App logo</string>
    <string name="dit_timetable_feedback">DIT Timetable feedback</string>
    <string name="other_apps">Other Apps</string>
    <string name="no_events">No events</string>
    <string name="select_your_group_s_">Select your group(s):</string>
    <string name="no_groups_detected_in_current_timetable">No groups detected in current timetable</string>
    <string name="reload">Reload</string>
    <string name="no_modules_detected_in_current_timetable">No modules detected in current timetable</string>
    <string name="modules">Modules</string>
    <string name="select_modules_you_are_taking_">Select modules you are taking:</string>
    <string name="version_s">Version %1$s (build %2$d)</string>
    <string name="no_more_events_today">No upcoming events</string>
    <string name="remaining_events_today_">Upcoming events:</string>
    <string name="please_download_timetable">Please download timetable</string>
</resources>