<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_refresh_timetable"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/menu_download_pdf"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
         android:icon="@drawable/download"
        android:title="@string/menu_download_pdf" 
        android:visible="true"/>
    
    <item android:id="@+id/menu_settings" 
        android:orderInCategory="200"
        android:title="@string/settings" 
       android:icon="@drawable/settings"
        android:showAsAction="ifRoom"></item>
    
    <item android:id="@+id/menu_groups"
        android:orderInCategory="103"
        android:title="@string/menu_groups"
        android:icon="@drawable/rating_not_important"
        android:showAsAction="ifRoom"
        android:visible="true"/>
    
    <item android:id="@+id/share_timetable"
        android:orderInCategory="105"
        android:title="Share timetable"
        android:titleCondensed="Share"
        android:showAsAction="ifRoom"
        android:icon="@drawable/share"
        android:visible="true"/>
    
    <item android:id="@+id/menu_web"
        android:orderInCategory="104"
        android:title="@string/web_view"
        android:showAsAction="ifRoom"
        android:visible="false"/>
    
    <item android:id="@+id/menu_about"
        android:orderInCategory="201"
        android:title="@string/about"
        android:showAsAction="ifRoom"
        android:icon="@drawable/help"
        android:visible="true"/>
</menu>